--- a/app/views/connect4.scala.html
+++ b/app/views/connect4.scala.html
@@ -9,10 +9,8 @@
                     <span class="cell">
                         <span>
                             @if(col == 0) {<br>}
-                        @{if(controller.cell(row, col).isSet && controller.cell(row,col).color.equals("red")) {
-                            "r"
-                        } else if (controller.cell(row, col).isSet && controller.cell(row, col).color.equals("yellow")) {
-                            "y"
+                        @{if(controller.cell(row, col).isSet) {
+                             controller.cell(row,col).color
                         } else {
                             "-"
                         }
@@ -21,5 +19,10 @@
                 }
             }
         </div>
+        <form action="/game/controller" method="post">
+            <label for="inputfield">Ihre Eingabe:</label>
+            <input type="text" id="inputField" name="inputField"></input>
+            <input type="submit" value="Submit">
+        </form>
     </div>
 }
