--- a/app/views/rules.scala.html
+++ b/app/views/rules.scala.html
@@ -39,4 +39,5 @@
             </p>
         </div>
     </div>
+    <p>Well, let's get started shall we? Check out the <a href="/games">Lobby</a></p>
 }
