add css layout to rules.

--- a/app/views/rules.scala.html
+++ b/app/views/rules.scala.html
@@ -1,9 +1,11 @@
 @main("Welcome to Play") {
-    <h1>Connect 4 Rules</h1>
-    <ul>
-        <li><a href="#overviev">Overview</a></li><li><a href="#turn">Play a turn</a></li><li><a href="#end">End of the Game</a></li>
-    </ul>
+    <head><link rel="stylesheet" href="main.css"></head>
+
+    <div class="header"><h1>Connect 4: Rules</h1></div>
     <div class="container">
+        <ul>
+            <li><a href="#overviev">Overview</a></li><li><a href="#turn">Play a turn</a></li><li><a href="#end">End of the Game</a></li>
+        </ul>
         <div id="overview">
             <h2>Overview</h2>
             <p>
@@ -38,6 +40,7 @@
                     <img src="" alt="ADD FILLED BOARD">
             </p>
         </div>
+        <p>Well, let's get started shall we? Check out the <a href="/games">Lobby</a></p>
     </div>
-    <p>Well, let's get started shall we? Check out the <a href="/games">Lobby</a></p>
+
 }
