--- a/app/views/connect4.scala.html
+++ b/app/views/connect4.scala.html
@@ -14,20 +14,20 @@
         } else {
         <div class="board">
             @for(row <- 0 until controller.sizeOfRows) {
+                <div class="boardrow">
                 @for(col <- 0 until controller.sizeOfCols) {
                     @{if(controller.cell(row, col).isSet){
                         if(controller.cell(row, col).color.equals(Color.RED)){
-                          <span class="cell red">r |</span>
+                          <span class="cell red">RED</span>
                         }else {
-                          <span class="cell yellow">y |</span>
+                          <span class="cell yellow">YELLOW</span>
                         }
                     } else {
-                        <span class="cell unset"> - |</span>
+                        <span class="cell unset"></span>
                     }
                     }
                     
-                }
-                    <br>
+                }</div>
             }
         </div>
         <div> @{if(controller.getState.toString().equals("InGameState")) {controller.getPlayerDemandString} else {controller.stateString}}</div>
@@ -36,6 +36,8 @@
             <input type="text" id="inputField" name="inputField"></input>
             <input type="submit" value="Submit">
         </form>
+            <hr>
+            Zurück zur <a href="/games">Lobby</a>
     </div>
 }
 }
