--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,8 @@
 @main("Welcome to Play") {
-  <h1>Welcome to Connect 4!</h1>
-  You can read the <a href="/rules">rules here</a><br>
-  Or simply start <a href="/games">playing!</a>
+  <div class="container">
+    <h1>Welcome to Connect 4!</h1>
+    You can read the <a href="/rules">rules here</a><br>
+    Or simply start <a href="/games">playing!</a>
+  </div>
+
 }
