--- a/app/views/games.scala.html
+++ b/app/views/games.scala.html
@@ -15,9 +15,9 @@
         </p>
         <ul>
             <div class="container">
-                <div class="row">
+                <div class="row justify-content-left">
             @for((key,game) <- games) {
-                <div class="col">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-3">
                 <div class="card" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
