--- a/app/views/connect4.scala.html
+++ b/app/views/connect4.scala.html
@@ -4,6 +4,18 @@
 @getPlayersColor(row:Int, col:Int) = @{controller.getPlayers(controller.getCurrentPlayerIndex).color.toString}
 @getSizeOfRows() = @{controller.sizeOfCols}
 
+@getPreviewCellIndex(col:Int)= @{
+    var idx = controller.sizeOfRows-1
+    var found = false
+    while(!found && idx >= 0){
+    found = !controller.cell(idx,col).isSet
+    idx -= 1
+    }
+    if(found) {
+      idx+1
+    }
+}
+
 @main("Welcome to Play") {
     <h1>Connect 4</h1>
     <div class="container">
@@ -30,7 +42,7 @@
                 @for(col <- 0 until controller.sizeOfCols) {
                     @if(controller.cell(row, col).isSet) {
                         if(controller.cell(row, col).color.equals(Color.RED)){<span class="cell red">RED</span>}else {<span class="cell yellow">YELLOW</span>}
-                    } else {<span id="cell-(@row,@col)" class="cell unset" onclick="setColor('@getPlayersColor(row,col)', this)" onmouseenter="zoomIn(event, this, @getSizeOfRows())" onmouseleave="zoomOut()" ></span>}
+                    } else {<span id="cell-(@row,@col)" class="cell unset" onclick="setColor('@getPlayersColor(row,col)', this)" onmouseenter="zoomIn(event, this, @getSizeOfRows(), @getPreviewCellIndex(col))" onmouseleave="zoomOut()" ></span>}
                 }</div>
             }
         </div>
