added Websocket functionality, switched from routes to sockets.

--- a/app/views/connect4.scala.html
+++ b/app/views/connect4.scala.html
@@ -28,13 +28,13 @@
             </form>
         } else {
             <div class="list-group list-group-horizontal">
-                <a role="button" class="btn btn-primary list-group-item list-group-item-action" href="/games/@id/restart">
+                <button id="btn_restart" class="btn btn-primary list-group-item list-group-item-action">
                    Restart Game
-                </a>
-                <a class="btn btn-primary list-group-item list-group-item-action flex-fill" href="/games/@id/quit" role="button">Quit Game</a>
-                <a class="btn btn-primary list-group-item list-group-item-action flex-fill disabled" role="button">Save Game</a>
-                <a class="btn btn-primary list-group-item list-group-item-action flex-fill" href="/games/@id/undo" role="button">Undo</a>
-                <a class="btn btn-primary list-group-item list-group-item-action flex-fill" href="/games/@id/redo" role="button">Redo</a>
+                </button>
+                <button id="btn_quit" class="btn btn-primary list-group-item list-group-item-action flex-fill" >Quit Game</button>
+                <button id="btn_save" class="btn btn-primary list-group-item list-group-item-action flex-fill disabled">Save Game</button>
+                <button id="btn_undo" class="btn btn-primary list-group-item list-group-item-action flex-fill">Undo</button>
+                <button id="btn_redo" class="btn btn-primary list-group-item list-group-item-action flex-fill">Redo</button>
             </div>
         <div class="board">
             @for(row <- 0 until controller.sizeOfRows) {
@@ -51,9 +51,11 @@
             <input type="text" id="inputField" name="inputField"></input>
             <input type="submit" value="Submit">
         </form>
-            <hr>
-            Zurück zur <a href="/games">Lobby</a> !-->
+            <hr> -->
+            Zurück zur <a href="/games">Lobby</a>
     </div>
+    <script> ID = @id</script>
+    <script src="@routes.Assets.versioned("javascripts/game.js")" type="text/javascript"></script>
 
 }
 }
