--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -8,14 +8,6 @@
 
 }
 
-.container {
-    /*
-    padding-left: 15%;
-    padding-right: 15%;
-*/
-
-}
-
 h2 {
     font-family: "Arial Black", Gadget, sans-serif;
     border-left: 0.4em solid black;
@@ -35,6 +27,15 @@ body {
     background-size: 100%;
 
 }
+
+.board {
+    background-image: url("../images/wood_background.jpeg");
+    width: 80%;
+    margin: auto;
+    border: 10px solid #331A00;
+}
+
+
 .boardrow {
     display: flex;
     height:15%;
