integrate vue, add vue.js and connect4Vue.js.

--- a/app/views/connect4.scala.html
+++ b/app/views/connect4.scala.html
@@ -17,6 +17,7 @@
 }
 
 @main("Welcome to Play") {
+
     <h1>Connect 4</h1>
     <div class="container">
         @if(controller.getPlayers.size != 2){
@@ -56,6 +57,10 @@
     </div>
     <script> ID = @id</script>
     <script src="@routes.Assets.versioned("javascripts/game.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.versioned("javascripts/vue.js")" ></script>
+    <script src='@routes.Assets.versioned("javascripts/connect4Vue.js")'></script>
+
+
 
 }
 }
