add buttonGroup Component.

--- a/app/views/connect4.scala.html
+++ b/app/views/connect4.scala.html
@@ -28,15 +28,8 @@
                 <input type="submit" value="Submit">
             </form>
         } else {
-          <div class="list-group list-group-horizontal">
-                <button id="btn_restart" class="btn btn-primary list-group-item list-group-item-action">
-                   Restart Game
-                </button>
-                <button id="btn_quit" class="btn btn-primary list-group-item list-group-item-action flex-fill" >Quit Game</button>
-                <button id="btn_save" class="btn btn-primary list-group-item list-group-item-action flex-fill disabled">Save Game</button>
-                <button id="btn_undo" class="btn btn-primary list-group-item list-group-item-action flex-fill">Undo</button>
-                <button id="btn_redo" class="btn btn-primary list-group-item list-group-item-action flex-fill">Redo</button>
-            </div>
+
+            <buttongroup></buttongroup>
        <!-- <div class="board">
             @for(row <- 0 until controller.sizeOfRows) {
                 <div class="boardrow">
