added btn-group css

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -28,6 +28,11 @@ body {
 
 }
 
+.btn-group-above {
+    width: 80%;
+    margin: auto;
+}
+
 .board {
     background-image: url("../images/wood_background.jpeg");
     width: 80%;
